sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/Candidate_Requisition__c.object-meta.xml
<CustomObject>
    <label>Candidate Evaluation</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Candidate Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>