sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipName>Candidate_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>