sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/Candidate_Rating__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rating__c</fullName>
    <label>Candidate Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>