sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/In_Offer__c.field-meta.xml
<CustomField>
    <fullName>In_Offer__c</fullName>
    <label>In Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents Check</fullName>
            </value>
            <value>
                <fullName>References Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>