sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/In_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Review__c</fullName>
    <label>In Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Longlisted</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Phone Interview</fullName>
            </value>
            <value>
                <fullName>Face to Face Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>