sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/Recruitment_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Requisition</label>
    <referenceTo>Recruitment_Requisition__c</referenceTo>
    <relationshipName>Candidate_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>