sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Evaluation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Longlisted</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Offer</fullName>
                <isActive>false</isActive>
                <label>In Offer</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>