sfSandBoxCode/force-app/main/default/objects/Candidate_Requisition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Recruitment_Requisition__c</columns>
    <columns>Candidate_Star_Rating__c</columns>
    <columns>Years_Of_Experience__c</columns>
    <columns>Status__c</columns>
    <columns>In_Offer__c</columns>
    <columns>In_Review__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>